# filename-normalizer

./: .gitignore  Cargo.toml  README.md  make.bat
script/: install.bat  uninstall.bat
src/: main.rs
